Bai tap ngay 19/04/2024 (4)

--- a/Bai_tap_cua_Hota_buoi2/B1.html
+++ b/Bai_tap_cua_Hota_buoi2/B1.html
@@ -10,7 +10,7 @@
 <body>
     <h1> Advertising estimate </h1>
     <label for="companyName">
-        Name / Company Name
+       \ Name / Company Name
         <br>
         <input style="width:400px; height: 24px" id="companyName" type="text" name="companyName">
     </label>
