--- a/Bai_tap_cua_Hota_buoi2/B4.html
+++ b/Bai_tap_cua_Hota_buoi2/B4.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Reservation</title>
 </head>
+
 <body>
     <h1>Hotel Reservation</h1>
     <form action="#" method="post">
-        <label for="fname">
-            First name
-        </label>
-        <input placeholder="Enter first name" style="width:200px; height: 24px" id="fname" type="text" name="firstname" required>
-        <label for="lname">
-            Last name
+        <span style="display: inline-block;">
+            <label>
+                First name
+            </label>
+            <br>
+            <input placeholder="Enter first name" style="width:200px; height: 24px" id="fname" type="text"
+                name="firstname" required>
+        </span>
+        <span style="display: inline-block;">
+            <label>
+                Last name
+            </label>
+            <br>
             <input placeholder="Enter last name" style="width:200px; height: 24px" id="lname" type="text"
                 name="lastname">
-        </label>
-
+        </span>
         <br><br>
 
         <label for="phone">
@@ -77,4 +85,5 @@
         <input type="submit">
     </form>
 </body>
+
 </html>
