--- a/Day_5/Bai_2.html
+++ b/Day_5/Bai_2.html
@@ -6,23 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bai_1</title>
     <style>
- *{
-    padding: 0;
-    margin: 0;
-    font-family:Arial, Helvetica, sans-serif;
- }
- .container{
-    display: flex;
-    font-size: 16px;
-    height: 400px;
-    width: fit-content;
-    background-color: rgb(173, 239, 251);
-    padding: 20px;
-    margin: 20px;
-    border: 2px;
-    border-color: black;
- }
-        .nav-link{
+        * {
+            padding: 0;
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .container {
+            display: flex;
+            font-size: 16px;
+            height: 400px;
+            width: fit-content;
+            background-color: rgb(173, 239, 251);
+            padding: 20px;
+            margin: 20px;
+            border: 2px;
+            border-color: black;
+        }
+
+        .nav-link {
             text-align: center;
             list-style: none;
             padding: 10px 20px;
@@ -45,13 +47,15 @@
             display: none;
             list-style: none;
         }
-        .sub_drop{
+
+        .sub_drop {
             border: solid 1px;
             margin: -1.1px 0px;
             padding: 10px 40px;
             font-size: 14px;
-            
+
         }
+
         .nav-link:hover {
             background-color: black;
             color: #fff;
@@ -65,6 +69,7 @@
             background: black;
             color: #fff;
         }
+
         p {
             position: relative;
             bottom: -165px;
@@ -103,3 +108,72 @@
 </body>
 
 </html>
+<!-- Chữa bài -->
+<!-- <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <style>
+        .container {
+            border: 1px solid #0f9fda;
+            width: fit-content;
+            padding: 12px;
+            background: skyblue;
+        }
+
+        .menu {
+            border: 1px solid #d2a05c;
+            padding: 8px;
+            text-align: center;
+            margin: 8px 0px;
+            background: antiquewhite;
+            position: relative;
+            cursor: pointer;
+        }
+
+        .sub-menu {
+            border: 1px solid black;
+            position: absolute;
+            top: 0;
+            right: -107px;
+            /* border-bottom: 1px solid black; */
+            display: none;
+        }
+
+        .sub-menu-name {
+            padding: 8px;
+            border-bottom: 1px solid black;
+        }
+
+        .sub-menu-name:last-child {
+            border-bottom: none;
+        }
+
+        .menu-users:hover>.sub-menu {
+            display: block;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div class="menu">Home</div>
+        <div class="menu menu-users">
+            Users
+            <div class="sub-menu">
+                <div class="sub-menu-name">Customers</div>
+                <div class="sub-menu-name">Admins</div>
+                <div class="sub-menu-name">VIP</div>
+                <div class="sub-menu-name">My staffs</div>
+            </div>
+        </div>
+        <div class="menu">Products</div>
+        <div class="menu">Orders</div>
+    </div>
+</body>
+
+</html> -->
